# testros

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  start_services.sh  stop_services.sh
mosquitto/config/: mosquitto.conf  passwords.txt
src/fg_srv/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/fg_srv/action/: Mission.action  __init__.py
src/fg_srv/fg_srv/: __init__.py  mission_robot_controller.py  rn1.py  rn2.py
src/fg_srv/launch/: mission_simulation.launch.py  mission_system.launch.py
src/fg_srv/rest_api/: app.py
src/fg_srv/rest_api/integrations/: __init__.py  d365_integration.py  integrations_manager.py  odoo_integration.py  opcenter_integration.py  sap_erp_integration.py  sap_mes_integration.py
src/fg_srv/test/: __init__.py  test_rest_api.py  test_ros2_nodes.py
src/fg_srv/urdf/: mission_robot.urdf
src/fg_srv/worlds/: empty.world
templates/: index.html  login.html
